--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,25 @@
-.asdf{
+.container{
+	background-color: #D3D3D3;
+	margin: 50px 100px 50px 100px;	
+}
+.title{
+	margin: 50px 50px 50px 50px;
+	text-align: center;
+	color: #7BAFD4;
+}
 
+.quote{
+	margin: 50px 50px 50px 50px;
+	color: white;
+	text-align: center;
+
+
+}
+
+.img{
+	max-width: 100%;
+	height: auto;
+	margin: 50px 50px 50px 50px;
+	display: block;
+	margin: auto auto;
 }
